<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Basic project details -->
  <groupId>SmartHouseG10</groupId>
  <artifactId>SmartHouseG10</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <!-- Build section -->
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>  <!-- Change to src/main/java if it is the standard directory structure -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>  <!-- Change to src/main/resources if resources are stored here -->
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
</properties>

  <!-- Dependencies section -->
  <dependencies>
    <!-- JUnit for testing -->
    <dependency>
  <groupId>org.mockito</groupId>
  <artifactId>mockito-core</artifactId>
  <version>3.9.0</version>
  <scope>test</scope>
</dependency>

    <!-- Mockito for mocking objects in tests -->
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>3.11.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
